@startuml
hide circle

entity User{
    * id
    email
    password
    first_name
    last_name
    birth_date: date
    role
    city
    street
    zip_code
    house_number
}

entity Participation {

}

entity Report {
    * id
    description
    state
    city
    street
    zip_code
    house_number[0..1]
    created_at: timestamp
}

entity Event {
    * id
    date_hour
    duration
    description[0..1]
    created_at
}

entity ReportType {
    * id
    label
}

User |o--o{ Report : reporter
Report ||--o{ Event : organisation
User ||--o{ Participation : participant
Participation }o--|| Event : participant
User |o--o{ Event : creator
Report }o--o| ReportType : type

@enduml
